# sugi

./: .gitignore  CMakeLists.txt  Makefile  Makefile_old  README.md  TODO.md
include/: bool.h  palette.h  sugi.h  sugi_font.h  sugi_palette.h
lua/: main.lua
src/: main.c  sugi_core.c  sugi_gfx.c  sugi_input.c  sugi_lua.c  sugi_map.c  sugi_mem.c  sugi_render.c  sugi_shaders.c  sugi_term.c
